# mcp-server-dunnet

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/instructions/: play-dunnet.instructions.md
crates/dunnet/: Cargo.toml
crates/dunnet/src/: lib.rs  mcp_server.rs  toggle.rs
crates/dunnet/src/mcp_server/: handler.rs  mod.rs  tools.rs
