[workspace]
members = ["crates/dunnet"]
resolver = "3"

[workspace.dependencies]
futures = { version = "^0.3" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "^1.45", features = ["full"] }
tokio-stream = { version = "^0.1" }
rust-mcp-sdk = { version = "0.4.2", features = ["server"]}
async-trait = { version = "0.1" }