[package]
name = "dunnet"
version = "0.1.0"
edition = "2024"

default-run = "dunnet"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["io-util"] }
rust-mcp-sdk = { workspace = true, features = ["server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }

[[bin]]
name = "dunnet"

[[bin]]
name = "dunnet-mcp"